--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,15 +80,12 @@
   "debug.javascript.codelens.npmScripts": "all",
   "editor.guides.bracketPairs": "active",
   "editor.bracketPairColorization.enabled": true,
-  "javascript.format.insertSpaceAfterOpeningAndBeforeClosingJsxExpressionBraces": true,
   "javascript.format.insertSpaceAfterOpeningAndBeforeClosingTemplateStringBraces": true,
   "typescript.format.insertSpaceAfterOpeningAndBeforeClosingJsxExpressionBraces": true,
   "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true,
   "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": true,
   "typescript.format.insertSpaceAfterOpeningAndBeforeClosingTemplateStringBraces": true,
   "typescript.format.insertSpaceBeforeFunctionParenthesis": true,
-  "javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
-  "javascript.format.insertSpaceAfterOpeningAndBeforeClosingEmptyBraces": false,
   "editor.parameterHints.cycle": true,
   "typescript.inlayHints.parameterNames.enabled": "all",
   "terminal.integrated.bellDuration": 1500,
@@ -108,5 +105,8 @@
   "editor.codeLensFontFamily": "'Source Code Pro', 'Source Code Pro Semibold'",
   "terminal.integrated.fontFamily": "'Source Code Pro', 'Source Code Pro Semibold'",
   "workbench.editor.closeOnFileDelete": true,
-  "explorer.compactFolders": false
+  "explorer.compactFolders": false,
+  "javascript.format.insertSpaceAfterOpeningAndBeforeClosingJsxExpressionBraces": true,
+  "tailwindCSS.rootFontSize": 15,
+  "tailwindCSS.emmetCompletions": true
 }
